--- a/AudioStream/mainwidget.ui
+++ b/AudioStream/mainwidget.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWidget</string>
+   <string>AudioStream</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
